with-gateway/contour/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: contour-gateway-class
spec:
  controllerName: projectcontour.io/gateway-controller
