with-gateway/contour/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my--contour-route
  namespace: default
spec:
  parentRefs:
    - name: contour-gateway
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-service-for-ingress # Nombre de tu Service
          port: 80
